Update getDesktopDirectory code from IntelliJ platform
Bug: N/A
Test: existing
Change-Id: I74efbf4470ba5c71114098b7fa41eef2eb39f579

GitOrigin-RevId: 18b8948de44247c83d3d6109cf5790b6f69665d4
(cherry picked from commit 8c192683c4b7f019b80c739a79bf8fb3d187b889)